# damiao-driver-cpp

./: .gitignore  CMakeLists.txt  Doxyfile.in  LICENSE  README.md
.github/workflows/: ci.yml
examples/: mit_control.cpp
include/damiao/: can_bus.hpp  comm_bus.hpp  damiao.hpp  motor.hpp  types.hpp  uart_bus.hpp
include/damiao_driver/: can_bus.hpp  comm_bus.hpp  damiao_driver.hpp  motor.hpp  types.hpp  uart_bus.hpp
src/: can_bus.cpp  motor.cpp  types.cpp  uart_bus.cpp
tests/: test_comm_bus.cpp  test_motor.cpp  test_types.cpp
